welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color.red);faireV();
        ^MethodsPicture:12: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color.Blue);faireV();
        ^MethodsPicture:13: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color.Green);faireV();
        ^