welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
def marque() {
	baisseBrosse();leveBrosse();
}
def faireV() {
	avance();marque();avance();gauche();avance();marque();droite();avance();droite();avance();marque();gauche();avance();gauche();
}
def faireMotif() {
	setCouleurBrosse(Color.yellow);faireV();
	setBrosseCouleur(Color.red);faireV();
	setBrosseCouleur(Color.Blue);faireV();
	setBrosseCouleur(Color.Green);faireV();
}
def faireL(){
var y="";
for (y<- 1 to 3) {
	faireMotif();avance(5);
}
}
var z="";
for (z<- 1 to 3) {
	faireL();gauche();avance(5);droite();
}
}
